sumo/tests/netgen/junction_types/errors/junction_type_actuated_tls/random/options.netgen
--default-junction-type actuated -v --random-net -o net.net.xml --rand-iterations=10
